--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -27,10 +27,10 @@
 .schedule-button {
     margin: auto;
     display: block;
-    font-size: 20px;
+    font-size: 18px;
     margin-top: 20px;
     margin-bottom: 20px;
-    background-color: #d32f2f; /* Adjust according to your secondary color */
+    background-color: #014494; /* Adjust according to your secondary color */
     color: white;
     padding: 10px 20px;
     text-align: center;
