minor layout fixes

--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -95,6 +95,7 @@
     font-size: 32px; /* Approximation of theme.spacing(4) */
     font-weight: 550;
     margin-bottom: 20px;
+    text-align: center;
 }
 
 .main{
